src/objects/SFO_Dynamic_Fields__c.object
<CustomObject>
    <fields>
        <fullName>Field_Value_Number__c</fullName>
        <formula>IF(ISNUMBER(Field_Value__c),VALUE( Field_Value__c ),0)</formula>
        <inlineHelpText>Copy the field value of Number</inlineHelpText>
        <label>Field Value Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field_Value__c</fullName>
        <label>Field Value</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Available_for_RollUp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Available for RollUp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Eng_Draftng_Cost__c</fullName>
        <formula>IF( 
OR( 
CONTAINS(Name,&quot;Engineering Cost&quot;), 
CONTAINS(Name,&quot;Drafting Cost&quot;) 
), 
&quot;TRUE&quot;, 
&quot;FALSE&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Eng/Draftng Cost</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Modifer_Material_Mfg_Cost__c</fullName>
        <formula>IF( 
OR( 
CONTAINS(Name,&quot;Manufacturing Cost&quot;), 
CONTAINS(Name,&quot;Material Cost&quot;), 
CONTAINS(Name,&quot;Modifier Cost&quot;) 
), 
&quot;TRUE&quot;, 
&quot;FALSE&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Modifer/Material/Mfg Cost</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Rollup_Field__c</fullName>
        <formula>IF(
    OR(
        CONTAINS(Name,&quot;Manufacturing Cost&quot;),
        CONTAINS(Name,&quot;Material Cost&quot;),
        CONTAINS(Name,&quot;Engineering Cost&quot;),
        CONTAINS(Name,&quot;Drafting Cost&quot;),
        CONTAINS(Name,&quot;Modifier Cost&quot;)
    ),
    &quot;TRUE&quot;,
     &quot;FALSE&quot;
)</formula>
        <label>Is Rollup Field</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <formula>SFO__r.Notes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Notes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Name__c</fullName>
        <formula>SFO__r.Component_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picklist_Entries__c</fullName>
        <label>Picklist Entries</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SFO_Field__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>SFO Field</label>
        <referenceTo>SFO_Fields__c</referenceTo>
        <relationshipName>SFO_Dynamic_Fields</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFO__c</fullName>
        <label>SFO</label>
        <referenceTo>Special_Feature_Option__c</referenceTo>
        <relationshipName>SFO_Dynamic_Fields</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>Text(SFO__r.Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <label>Special Feature Dynamic Fields</label>
    <nameField>
        <label>Field Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Special Feature Dynamic Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>